.stack-work/logs/tasty-1.1.0.4.log
Configuring tasty-1.1.0.4...
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]
Preprocessing library for tasty-1.1.0.4..
Building library for tasty-1.1.0.4..

[;1mTest/Tasty/CmdLine.hs:24:5: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined][0m[0m
[;1m[34m   |[0m[0m
[;1m[34m24 |[0m[0m #if [;1m[31mI[0m[0mNSTALL_HANDLERS
[;1m[34m   |[0m[0m[;1m[31m     ^[0m[0m
[0m[0m[0m#if INSTALL_HANDLERS
    ^

[;1mTest/Tasty/CmdLine.hs:22:26: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     note: expanded from macro 'INSTALL_HANDLERS'[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m22 |[0m[0m #define INSTALL_HANDLERS [;1m[31md[0m[0mefined UNIX && MIN_VERSION_base(4,6,0)
[;1m[34m   |[0m[0m[;1m[31m                          ^[0m[0m
[0m[0m[0m#define INSTALL_HANDLERS defined UNIX && MIN_VERSION_base(4,6,0)
                         ^

[;1mTest/Tasty/CmdLine.hs:87:5: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: macro expansion producing 'defined' has undefined behavior [-Wexpansion-to-defined][0m[0m
[;1m[34m   |[0m[0m
[;1m[34m87 |[0m[0m #if [;1m[31mI[0m[0mNSTALL_HANDLERS
[;1m[34m   |[0m[0m[;1m[31m     ^[0m[0m
[0m[0m[0m#if INSTALL_HANDLERS
    ^

[;1mTest/Tasty/CmdLine.hs:22:26: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     note: expanded from macro 'INSTALL_HANDLERS'[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m22 |[0m[0m #define INSTALL_HANDLERS [;1m[31md[0m[0mefined UNIX && MIN_VERSION_base(4,6,0)
[;1m[34m   |[0m[0m[;1m[31m                          ^[0m[0m
[0m[0m[0m#define INSTALL_HANDLERS defined UNIX && MIN_VERSION_base(4,6,0)
                         ^
2 warnings generated.
[ 1 of 22] Compiling Test.Tasty.Options ( Test/Tasty/Options.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Options.o )
[ 2 of 22] Compiling Test.Tasty.Parallel ( Test/Tasty/Parallel.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Parallel.o )
[ 3 of 22] Compiling Test.Tasty.Patterns.Expr ( Test/Tasty/Patterns/Expr.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Patterns/Expr.o )
[ 4 of 22] Compiling Test.Tasty.Patterns.Types ( Test/Tasty/Patterns/Types.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Patterns/Types.o )
[ 5 of 22] Compiling Test.Tasty.Patterns.Parser ( Test/Tasty/Patterns/Parser.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Patterns/Parser.o )
[ 6 of 22] Compiling Test.Tasty.Patterns.Eval ( Test/Tasty/Patterns/Eval.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Patterns/Eval.o )
[ 7 of 22] Compiling Test.Tasty.Patterns ( Test/Tasty/Patterns.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Patterns.o )

[;1mTest/Tasty/Patterns.hs:17:1: [;1m[35mwarning:[0m[0m[;1m [[;1m[35m-Wunused-imports[0m[0m[;1m][0m[0m[;1m
    The import of ‘Data.Monoid’ is redundant
      except perhaps to import instances from ‘Data.Monoid’
    To import instances alone, use: import Data.Monoid()[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m17 |[0m[0m [;1m[35mimport Data.Monoid[0m[0m
[;1m[34m   |[0m[0m[;1m[35m ^^^^^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m[ 8 of 22] Compiling Test.Tasty.Options.Core ( Test/Tasty/Options/Core.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Options/Core.o )

[;1mTest/Tasty/Options/Core.hs:16:1: [;1m[35mwarning:[0m[0m[;1m [[;1m[35m-Wunused-imports[0m[0m[;1m][0m[0m[;1m
    The import of ‘Data.Monoid’ is redundant
      except perhaps to import instances from ‘Data.Monoid’
    To import instances alone, use: import Data.Monoid()[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m16 |[0m[0m [;1m[35mimport Data.Monoid[0m[0m
[;1m[34m   |[0m[0m[;1m[35m ^^^^^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m[ 9 of 22] Compiling Test.Tasty.Core  ( Test/Tasty/Core.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Core.o )
[10 of 22] Compiling Test.Tasty.Providers ( Test/Tasty/Providers.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Providers.o )
[11 of 22] Compiling Test.Tasty.Runners.Reducers ( Test/Tasty/Runners/Reducers.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Runners/Reducers.o )
[12 of 22] Compiling Test.Tasty.Run   ( Test/Tasty/Run.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Run.o )
[13 of 22] Compiling Test.Tasty.Ingredients ( Test/Tasty/Ingredients.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Ingredients.o )
[14 of 22] Compiling Test.Tasty.Ingredients.ListTests ( Test/Tasty/Ingredients/ListTests.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Ingredients/ListTests.o )
[15 of 22] Compiling Test.Tasty.Ingredients.IncludingOptions ( Test/Tasty/Ingredients/IncludingOptions.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Ingredients/IncludingOptions.o )
[16 of 22] Compiling Test.Tasty.Options.Env ( Test/Tasty/Options/Env.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Options/Env.o )
[17 of 22] Compiling Test.Tasty.CmdLine ( Test/Tasty/CmdLine.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/CmdLine.o )
[18 of 22] Compiling Test.Tasty.Runners.Utils ( Test/Tasty/Runners/Utils.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Runners/Utils.o )
[19 of 22] Compiling Test.Tasty.Ingredients.ConsoleReporter ( Test/Tasty/Ingredients/ConsoleReporter.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Ingredients/ConsoleReporter.o )
[20 of 22] Compiling Test.Tasty.Ingredients.Basic ( Test/Tasty/Ingredients/Basic.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Ingredients/Basic.o )
[21 of 22] Compiling Test.Tasty.Runners ( Test/Tasty/Runners.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty/Runners.o )
[22 of 22] Compiling Test.Tasty       ( Test/Tasty.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Test/Tasty.o )
Installing library in /Users/wcastand/.stack/snapshots/x86_64-osx/lts-12.21/8.4.4/lib/x86_64-osx-ghc-8.4.4/tasty-1.1.0.4-6mvN2fsPNadAwEFlsywoQ0
Registering library for tasty-1.1.0.4..
